--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,4 +2,16 @@ version: 0.2
 phases:
   build:
     commands:
-      -echo "project is building"
+    -echo "This is build phase"
+  
+  post_build:
+    commands:
+    -echo "Deployed to s3"
+    
+artifacts:
+  type:zip
+  paths:
+    -'*'
+    
+    
+    
